Removed made by HMT

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
   <div class="wrapper" style="text-align: center;">
-    <p style="color: #555;">Made by <a href="//harrymt.com">harrymt.com</a></p>
+    <!-- <p style="color: #d6d0d0;">Made by <a style="color: #d6d0d0;" href="//harrymt.com">harrymt.com</a></p> -->
   </div>
 </footer>
