--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,21 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-<div class="home" style="text-align:center">
-  {{ content }}
-</div>
+  {% include head.html %}
+
+  <body {% if page.url == "/" %}class="home"{% endif %}>
+    {% include header.html %}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        <div class="home" style="text-align:center">
+          {{ content }}
+        </div>
+      </div>
+    </main>
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
