--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,19 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
-	{% seo %}
-	{% feed_meta %}
-	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-		<script>
-			(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,"script","//www.google-analytics.com/analytics.js","ga");
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
 
-			ga("create", "{{ site.google_analytics_key }}", "auto");
-			ga("send", "pageview");
-		</script>
-	{% endif %}
 </head>
 	<body>
 		<header>
@@ -35,7 +24,6 @@
 		{{ content }}
 		<footer>
 			<div class="container">
-				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p>
 				<div class="footer-columns">
 					{% for column in site.data.footer %}
 					<ul class="footer-links">
