--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -8,7 +8,8 @@ html, body {
 }
 
 body {
-	font-family: "San Francisco", "Helvetica Neue", "Helvetica", "Arial";
+	font-family: "Arvo", serif;
+	font-weight: 400;
 }
 
 a {
