--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -34,8 +34,15 @@
 .hero {
 	color: #ffffff;
 	text-align: center;
-	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
+	// background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
 	padding-top: 50px;
+
+ 	background-image: url("/images/a5.jpg");
+  padding-bottom: 350px;
+
+  // TODO:
+  background-size: cover;
+  // background-position-x: -400px;
 
 	p {
 		color: #fff;
