--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -5,7 +5,35 @@
 }
 
 .text-container {
-	max-width: 750px;
+  max-width: 750px;
+  // margin-right: -85px;
+    // margin-left: 52%;
+    margin-left: auto;
+  .subtext {
+    font-family: Georgia;
+    font-weight: 100;
+    font-size: 26px;
+
+  	@media #{$tablet} {
+			color: white;
+			    text-shadow: 2px 2px #101010;
+		}
+
+		@media #{$desktop} {
+		color: black;
+		    text-shadow: 0px 0px #101010;
+		}
+  }
+
+	@media #{$tablet} {
+		margin-left: auto;
+		color: white !important;
+	}
+
+	@media #{$desktop} {
+	color: black;
+		margin-left: 52%;
+	}
 }
 
 .container {
@@ -23,12 +51,12 @@ header {
 	background: $brand-color; /* Old browsers */
 	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
 
+
 	a {
 		color: #fff;
 		text-decoration: none;
 		z-index: 1;
 		position: relative;
-
 		&:hover {
 			text-decoration: none;
 		}
@@ -39,10 +67,27 @@ header {
 		line-height: 0;
 
 		a {
+			font-family: "Albondigas", serif;
+
 	    display: inline-block;
    		padding-top: 20px;
     	font-size: 18px;
     	padding-bottom: 15px;
+
+			padding-top: 20px;
+	    font-size: 108px;
+	    padding-bottom: 48px;
+	    font-weight: 100;
+
+
+	  	@media #{$tablet} {
+	    	font-size: 80px;
+			}
+
+			@media #{$desktop} {
+				font-size: 100px;
+			}
+
 		}
 
 		img {
