--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -14,7 +14,7 @@
     font-weight: 100;
     font-size: 26px;
 
-  	@media #{$tablet} {
+  	@media #{$mobile} {
 			color: white;
 			    text-shadow: 2px 2px #101010;
 		}
@@ -25,7 +25,7 @@
 		}
   }
 
-	@media #{$tablet} {
+	@media #{$mobile} {
 		margin-left: auto;
 		color: white !important;
 	}
