--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,6 +3,7 @@ $secondary-brand-color: #4182e4;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
+$mobile: "(min-width: 1px)";
 $tablet: "(min-width: 450px)";
 $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
