--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -80,8 +80,8 @@ header {
 	    font-weight: 100;
 
 
-	  	@media #{$tablet} {
-	    	font-size: 80px;
+	  	@media #{$mobile} {
+	    	font-size: 65px;
 			}
 
 			@media #{$desktop} {
